// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Colors should generate code snippet 1`] = `
{
  "code": "@theme {
  --color-*: initial;
  --color-red: #f00;
  --color-green: #0f0;
  --color-blue: #00f;
  --color-yellow: #ff0;
  --color-black: #000;
  --color-black-50: rgba(0, 0, 0, 0.5);
  --color-white: #fff;
}",
  "language": "css",
}
`;

exports[`Colors should generate exportable file 1`] = `
{
  "code": "/**
 * @license
 * Generated by Zeplin
 * Copyright (C) 2025 - present Zeplin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at

 *     http://www.apache.org/licenses/LICENSE-2.0

 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@theme {
  --color-*: initial;
  --color-red: #f00;
  --color-green: #0f0;
  --color-blue: #00f;
  --color-yellow: #ff0;
  --color-black: #000;
  --color-black-50: rgba(0, 0, 0, 0.5);
  --color-white: #fff;
}",
  "filename": "colors.css",
  "language": "css",
}
`;

exports[`Layer \`Exportable layer\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mt-[20px] mr-[20px] ml-[50px] object-contain bg-yellow">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Layer with blur\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mt-[20px] mr-[3.008px] ml-[20px]  blur-[10] filter-[] bg-[#0ff]">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Layer with border radius\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mt-[20px] mr-[20px] mb-[20px] ml-[50px] rounded-[20px] bg-red">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Layer with border\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mr-[70px] mb-[20px] border-2 black border-solid">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Layer with fill\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mr-[70px] mb-[20px] bg-blue">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Layer with gradient border\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mt-[20px] mr-[70px] mb-[70px] border-solid border-6  ">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Layer with gradient fill\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mt-[20px] mr-[70px] mb-[70px] bg-[linear-gradient(to bottom, rgba(255, 255, 255, 0.5), black-50)]">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Layer with shadow\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[100px] h-[100px] mt-[70px] mr-[20px] mb-[20px] ml-[50px] shadow-[0 2px 4px 6px black-50]">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Rotated layer\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[103.008px] h-[100px] mt-[20px] mb-[20px] ml-[20px] transform-[rotate(45deg)] bg-green">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Sample layer\` should generate code snippet 1`] = `
{
  "code": "<div class="w-xs h-3xl pr-[47.008px] pb-[138px]">
</div>",
  "language": "html",
}
`;

exports[`Layer \`Text layer with multiple styles\` should generate code snippet 1`] = `
{
  "code": "<p class="w-[220px] h-3 mt-[20px] mr-[53.008px] mb-[52px] font-sf-pro-text text-xl text-left text-black font-medium text-red">
</p>",
  "language": "html",
}
`;

exports[`Layer \`Text layer\` should generate code snippet 1`] = `
{
  "code": "<p class="w-[220px] h-3 mr-[53.008px] mb-[20px] font-sf-pro-text text-xl text-left text-black">
</p>",
  "language": "html",
}
`;

exports[`Layer \`Transparent layer with blend mode\` should generate code snippet 1`] = `
{
  "code": "<div class="w-[103.008px] h-[100px] mt-[70px] mb-[20px] ml-[20px] opacity-0.3 mix-blend-multiply bg-green">
</div>",
  "language": "html",
}
`;

exports[`Spacing should generate code snippet 1`] = `
{
  "code": "@theme {
  --spacing: 8px;
}",
  "language": "css",
}
`;

exports[`Spacing should generate exportable file 1`] = `
{
  "code": "/**
 * @license
 * Generated by Zeplin
 * Copyright (C) 2025 - present Zeplin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at

 *     http://www.apache.org/licenses/LICENSE-2.0

 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@theme {
  --spacing: 8px;
}",
  "filename": "spacing.css",
  "language": "css",
}
`;

exports[`Text Styles should generate code snippet 1`] = `
{
  "code": "@theme {
  /* Font families */
  --font-sf-pro-text: SFProText;
  
  /* Font weights */
  --font-normal: normal;
  
  /* Font sizes */
  --text-20: 20px;
}",
  "language": "css",
}
`;

exports[`Text Styles should generate exportable file 1`] = `
{
  "code": "/**
 * @license
 * Generated by Zeplin
 * Copyright (C) 2025 - present Zeplin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at

 *     http://www.apache.org/licenses/LICENSE-2.0

 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@theme {
  /* Font families */
  --font-sf-pro-text: SFProText;
  
  /* Font weights */
  --font-normal: normal;
  
  /* Font sizes */
  --text-20: 20px;
}",
  "filename": "fonts.css",
  "language": "css",
}
`;
